# tsp-optimization-application

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
data/best_solutions/: best_solution_sa.txt  best_solution_ts.txt
data/tsplib_test/: lower_col.tsp  lower_diag_col.tsp  upper_col.tsp  upper_diag_col.tsp  upper_row.tsp
docs/: project_structure.md
resources/metadata/: optimal_results.json
resources/tsplib_test/: full_matrix.tsp  full_matrix_5.tsp  lower_diag_row.tsp  lower_row.tsp  upper_diag_row.tsp
src/: config.py  main.py
src/algorithms/cpp/SA/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
src/algorithms/cpp/TS/: TabuSearch.cpp  TabuSearch.h
src/algorithms/cpp/TS/TabuList/: TabuList.cpp
src/algorithms/cpp/TS/enums/: InitialSolutionType.h  MoveType.h  TabuListLimitType.h  TenureType.h
src/algorithms/cpp/TS/utils/: MoveHashUtils.h  Neighbor.h
src/algorithms/cpp/bindings/: SimulatedAnnealingBindings.cpp  TabuSearchBindings.cpp
src/backend/: task_manager.py
src/backend/components/: algorithm_manager.py  report_directory_selector.py  report_generator.py  sa_parameters.py  ts_parameters.py  tsp_directory_selector.py
src/backend/components/processes/: algorithm_process.py  simulated_annealing_process.py  tabu_search_process.py
src/backend/components/threads/: algorithm_threads.py
src/backend/components/tsp_management/: tsp_catalog.py  tsp_file.py  tsplib_parser.py
src/backend/components/tsplib_management/: tsp_catalog.py  tsp_file.py  tsplib_parser.py
src/backend/configs/: algorithm_config.py
src/backend/processes/: base_algorithm_process.py  simulated_annealing_process.py  tabu_search_process.py
src/backend/tsp_management/: tsp_catalog.py  tsp_file.py  tsplib_parser.py
src/gui/: main_window.py
src/gui/components/: directory_selector.py
src/gui/components/plots/: city_map_widget.py  cost_plot_widget.py
src/gui/dialogs/: settings_dialog.py
src/gui/panels/: management_panel.py  results_panel.py  visualization_panel.py
src/gui/widgets/management/: algorithm_settings_widget.py  sa_settings_widget.py  ts_settings_widget.py  tsp_instances_widget.py
src/gui/widgets/visualization/: city_plot_widget.py  cost_plot_widget.py
src/interfaces/backend/components/: algorithm_manager_interface.py
src/interfaces/backend/components/processes/: algorithm_process_interface.py
src/interfaces/backend/components/tsp_management/: tsp_catalog_interface.py  tsp_file_interface.py  tsplib_parser_interface.py
src/interfaces/gui/components/: directory_selector_interface.py
src/tsp_algorithms/bindings/: SimulatedAnnealingBindings.cpp  TabuSearchBindings.cpp
src/tsp_algorithms/sa/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
src/tsp_algorithms/sa/enums/: InitialSolutionMethodSA.h  InitialSolutionTypeSA.h  InitialTempMethodSA.h  InitialTempType.h  MoveTypeSA.h  NeighborSelectionMethodSA.h  TempDecayType.h
src/tsp_algorithms/ts/: TabuSearch.cpp  TabuSearch.h
src/tsp_algorithms/ts/TabuList/: TabuList.cpp  TabuList.h
src/tsp_algorithms/ts/enums/: InitialSolutionMethodTS.h  InitialSolutionTypeTS.h  MoveTypeTS.h  NeighborSelectionMethodTS.h  TabuListLimitMethodTS.h  TenureTypeTS.h
src/tsp_algorithms/ts/utils/: MoveHashUtils.h  Neighbor.h
src/utils/: path_config.py
src/utils/interfaces/: directory_selector_interface.py  main_window_interface.py  task_manager_interface.py  tsp_catalog_interface.py  tsp_file_interface.py  tsplib_parser_interface.py
tests/: test_simulated_annealing.py  test_tabu_search.py
tests/unit_tests/: test_bulk_file_loader.py  test_file_loader.py  test_file_parser.py
